--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,21 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - restore_cache:  # download and cache dependencies
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-
       - run:
           name: install dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
             pip install -r requirements.txt
+      - save_cache:
+          paths:
+            - ./venv
+          key: v1-dependencies-{{ checksum "requirements.txt" }}
 #      - run:
 #          name: create artifacts folder   # not used at the moment
 #          command: |
