--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 version: 2.1
-orbs:
-  python: circleci/python@1.2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.1
+      - image: circleci/python:3.6.2
     working_directory: ~/repo
     steps:
       - checkout
@@ -27,9 +25,11 @@ jobs:
 #          name: create artifacts folder   # not used at the moment
 #          command: |
 #            mkdir /tmp/artifacts;
-      - run: sudo pip install black
+      - run: 
+          name: install Black
+          command: sudo pip install black
       - run:
-          name: black formatting
+          name: Check Black formatting
           command: black -l 88 src --check
       - run:
           name: run tests
