--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.1
+      - image: circleci/python:3.6.2
     working_directory: ~/repo
     steps:
       - checkout
@@ -25,8 +25,14 @@ jobs:
 #          name: create artifacts folder   # not used at the moment
 #          command: |
 #            mkdir /tmp/artifacts;
+      - run: 
+          name: Install Black
+          command: sudo pip install black
       - run:
-          name: run tests
+          name: Check Black formatting
+          command: black -l 88 src --check
+      - run:
+          name: Run tests
           command: |
             export PYTHONUNBUFFERED=1
             . venv/bin/activate
