Change Black target

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -34,7 +34,7 @@ jobs:
         sudo pip install black
     - name: Run Black
       run: |
-        black -l 88 copper tests --check
+        black -l 88 src --check
     - name: Test with Nose
       run: |
         export PYTHONUNBUFFERED=1
